--- a/templates/components/post/comments.html
+++ b/templates/components/post/comments.html
@@ -3,7 +3,7 @@
     {% if comments|length == 0 %}
         <div class="flex flex-col items-center justify-center">
             {% include 'svg/cat_butt.html' %}
-            <p class="text-txt_color_3 dark:text-white_2">Wow such empty</p>
+            <p class="text-txt_color_3">Wow such empty</p>
         </div>
     {% else %}
 
