--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,7 +8,7 @@
 
     <div class="w-[25%]">
       <div
-        class="bg-bg_1 dark:bg-dark_2 sticky top-[15vh] inline-block flex h-min max-h-[85vh] max-w-sm flex-col gap-3 overflow-auto rounded-lg border p-6 shadow-md dark:border-gray-700"
+        class="bg-bg_1 sticky top-[15vh] inline-block flex h-min max-h-[85vh] max-w-sm flex-col gap-3 overflow-auto rounded-lg border p-6 shadow-md"
       >
         <div class="flex w-full flex-row justify-between text-sm font-semibold">
           <h1 class="text-base font-bold">Recent Posts</h1>
