--- a/templates/base.html
+++ b/templates/base.html
@@ -41,30 +41,11 @@
     {% block quill %} {% endblock %}
 
     <script>
-        // On page load or when changing themes, best to add inline in `head` to avoid FOUC
-        if (
-            localStorage.getItem("color-theme") === "dark" ||
-            (!("color-theme" in localStorage) &&
-                window.matchMedia("(prefers-color-scheme: dark)").matches)
-        ) {
-            document.documentElement.classList.add("dark");
-        } else {
-            document.documentElement.classList.remove("dark");
-        }
-    </script>
-
-    <script>
         tailwind.config = {
             theme: {
                 extend: {
                     // SLAPSOIL COLORS
                     colors: {
-                        dark_1: "#0E1113",
-                        dark_2: "#05090B",
-                        dark_3: "#101214",
-                        dark_4: "#333D42",
-                        dark_5: "#161A1D",
-                        dark_6: "#181C1F",
                         gray_1: "#3C4244",
                         gray_2: "#2B3336",
                         gray_3: "#ffffff33",
@@ -94,8 +75,7 @@
                         slideIn: 'slideIn 0.3s ease-out forwards',
                     },
                 },
-            },
-            darkMode: "class",
+            }
         };
     </script>
     {% block extra_head %}{% endblock %}
@@ -103,12 +83,10 @@
 
 <body 
     class="
-        transition-colors dark:bg-dark_1 dark:text-white 
+        transition-colors 
         [&::-webkit-scrollbar]:w-2
         [&::-webkit-scrollbar-track]:bg-gray-100
         [&::-webkit-scrollbar-thumb]:bg-gray-300
-        dark:[&::-webkit-scrollbar-track]:bg-neutral-700
-        dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500
     ">
     {% include 'components/navbar.html'%}
     {% include 'components/image_modal.html'%}
