--- a/templates/community.html
+++ b/templates/community.html
@@ -22,7 +22,7 @@
 
                 {% if user_role == 'moderator' or user_role == 'admin' %}
                 <button onClick='set_is_editing(true); set_current_edit("Banner")' class='absolute right-3
-                top-[70%] rounded-full p-2 bg-white dark:bg-dark_1 dark:hover:bg-dark_2'>
+                top-[70%] rounded-full p-2 bg-white'>
                     <svg rpl="" fill="currentColor" height="16" icon-name="edit-outline" viewBox="0 0 20 20" width="16"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -35,7 +35,7 @@
             <div class='flex flex-row justify-between w-full relative bottom-6 items-end'>
                 <div class='flex flex-row gap-2 items-end'>
                     <div
-                        class="relative inline-flex items-center justify-center w-24 h-24 overflow-hidden rounded-full bg-white dark:bg-dark_1 p-2">
+                        class="relative inline-flex items-center justify-center w-24 h-24 overflow-hidden rounded-full bg-white p-2">
                         {% if community.avatar %}
                             {% if community.avatar|startswith:'https' %}
                                 <img id="community_avatar" src="{{community.avatar}}" class="img-modal w-full h-full rounded-full object-cover" />
@@ -45,7 +45,7 @@
                         {% if user_role == 'moderator' or user_role == 'admin' %}
                             <button
                               onclick="set_is_editing(true); set_current_edit('Avatar')"
-                              class="absolute bottom-2 right-2 flex h-7 w-7 flex-col items-center justify-center rounded-full border bg-white dark:bg-dark_1 dark:hover:bg-dark_2"
+                              class="absolute bottom-2 right-2 flex h-7 w-7 flex-col items-center justify-center rounded-full border bg-white "
                             >
                                 <svg rpl="" fill="currentColor" height="16"
                                     icon-name="edit-outline" viewBox="0 0 20 20" width="16"
@@ -65,7 +65,7 @@
                         </svg>
                         {%endif%}
                     </div>
-                    <p class='font-bold text-2xl text-txt_color_1 dark:text-white_1'>r/{{community.name}}</p>
+                    <p class='font-bold text-2xl text-txt_color_1'>r/{{community.name}}</p>
                 </div>
 
 
@@ -77,7 +77,7 @@
                             data-modal-target="sign_in_modal" data-modal-toggle="sign_in_modal"
                         {% endif %}
                         
-                        class='bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-dark_2 flex flex-row gap-2 rounded-2xl border border-white px-3 py-2 items-center cursor-pointer'>
+                        class='bg-button_gray hover:bg-button_gray_hover flex flex-row gap-2 rounded-2xl border border-white px-3 py-2 items-center cursor-pointer'>
                         <svg rpl="" fill="currentColor" height="20" icon-name="add-outline" viewBox="0 0 20 20"
                             width="16" xmlns="http://www.w3.org/2000/svg">
                             <path d="M19 9.375h-8.375V1h-1.25v8.375H1v1.25h8.375V19h1.25v-8.375H19v-1.25Z"></path>
