--- a/templates/components/account/profile.html
+++ b/templates/components/account/profile.html
@@ -128,7 +128,7 @@
 
     <div class="w-[30%]">
       <div
-        class="sticky top-[15vh] inline-block flex h-min max-h-[85vh] max-w-sm flex-col overflow-auto rounded-lg bg-bg_1 shadow-md dark:border-gray-700 dark:bg-dark_2"
+        class="sticky top-[15vh] inline-block flex h-min max-h-[85vh] max-w-sm flex-col overflow-auto rounded-lg bg-bg_1 shadow-md"
       >
         <div class="relative">
           {% if user_profile.banner %} {% if user_profile.banner|startswith:'https' %}
