--- a/templates/components/account/user_comments.html
+++ b/templates/components/account/user_comments.html
@@ -5,7 +5,7 @@
     {% for comment in comments %}
     <div
         onclick="window.location.href=`{% url 'post:post' comment.post.id %}`"
-        class="flex flex-col border dark:border-white_2 p-3 max-h-[400px] rounded-2xl hover:bg-white_1 dark:hover:bg-dark_3 cursor-pointer shadow-md hover:shadow-xl transition-all duration-300 ease-in-out relative"
+        class="flex flex-col border p-3 max-h-[400px] rounded-2xl hover:bg-white_1 cursor-pointer shadow-md hover:shadow-xl transition-all duration-300 ease-in-out relative"
         id="{{comment.id}}"
     >
         <div class="flex flex-col gap-2 items-start">
