--- a/templates/components/account/user_overview.html
+++ b/templates/components/account/user_overview.html
@@ -9,7 +9,7 @@
         {% else %}
             onclick="window.location.href=`{% url 'post:post' content.id %}`"
         {% endif %}
-        class="flex flex-col border dark:border-white_2 p-3 max-h-[400px] rounded-2xl hover:bg-white_1 dark:hover:bg-dark_3 cursor-pointer shadow-md hover:shadow-xl transition-all duration-300 ease-in-out relative"
+        class="flex flex-col border p-3 max-h-[400px] rounded-2xl hover:bg-white_1 cursor-pointer shadow-md hover:shadow-xl transition-all duration-300 ease-in-out relative"
         id="{{content.id}}"
     >
         {% if content.post %}
