--- a/templates/components/community/community_events.html
+++ b/templates/components/community/community_events.html
@@ -2,9 +2,9 @@
 <div class="w-full h-[1px] border-t "></div>
 
 <div class="flex flex-row gap-1 items-center font-medium">
-    <h1 class="text-txt_color_3 dark:text-white_2 text-md">EVENTS</h1>
+    <h1 class="text-txt_color_3 text-md">EVENTS</h1>
     {% if user_role == 'moderator' or user_role == 'admin' %}
-    <a href = "{% url 'community:event' community.name %}" class='bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-dark_2 rounded-full p-2'>
+    <a href = "{% url 'community:event' community.name %}" class='bg-button_gray hover:bg-button_gray_hover rounded-full p-2'>
 
         <svg width="14" height="14" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path d="M19 9.375h-8.375V1h-1.25v8.375H1v1.25h8.375V19h1.25v-8.375H19v-1.25Z"></path>
@@ -17,7 +17,7 @@
     {% with events=community|get_community_events %}
     {% if events|length > 0 %}
     {% for event in events %}
-    <li class="border-b rounded-t dark:border-gray-600 mb-2 italic">
+    <li class="border-b rounded-t mb-2 italic">
         <div onclick="window.location.href = `{% url 'community:event' event.community.name %}?event_id={{ event.id }}`" class="flex flex-col gap-2 group">
             <label for="t-{{event.id}}"
                 class="flex flex-row justify-between items-center rounded-lg w-full cursor-pointer">
@@ -30,7 +30,7 @@
                     <div>
 
                         <a href="{% url 'community:event' event.community.name %}?event_id={{event.id}}&edit=true"
-                            class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_2 dark:hover:bg-gray_2 rounded-full w-[40px] h-[40px] py-1 px-1 flex justify-center items-center">
+                            class="bg-button_gray hover:bg-button_gray_hover rounded-full w-[40px] h-[40px] py-1 px-1 flex justify-center items-center">
                             <svg rpl="" fill="currentColor" height="14" icon-name="edit-outline" viewBox="0 0 20 20"
                                 width="14" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -40,7 +40,7 @@
                         </a>
                     </div>
                     <button 
-                        class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_2 dark:hover:bg-gray_2 rounded-full w-[40px] h-[40px] py-1 px-1 flex justify-center items-center"
+                        class="bg-button_gray hover:bg-button_gray_hover rounded-full w-[40px] h-[40px] py-1 px-1 flex justify-center items-center"
                         onclick="
                             event.stopPropagation(); 
                             let modal = document.querySelector('#delete_community_event');
@@ -64,7 +64,7 @@
     {% else %}
     <div class="flex flex-col items-center justify-center">
         {% include 'svg/cat_butt.html' %}
-        <p class="text-txt_color_3 dark:text-white_2">Wow such empty</p>
+        <p class="text-txt_color_3">Wow such empty</p>
     </div>
     {% endif %}
     {% endwith %}
