--- a/templates/components/community/community_rules.html
+++ b/templates/components/community/community_rules.html
@@ -2,10 +2,10 @@
 <div class="w-full h-[1px] border-t "></div>
 
 <div class="flex flex-row gap-1 items-center font-medium">
-    <h1 class="text-txt_color_3 dark:text-white_2 text-md">RULES</h1>
+    <h1 class="text-txt_color_3 text-md">RULES</h1>
     {% if user_role == 'moderator' or user_role == 'admin' %}
     <button data-modal-target="create_community_rule" data-modal-toggle="create_community_rule"
-        class='bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-dark_2 rounded-full p-2'>
+        class='bg-button_gray hover:bg-button_gray_hover rounded-full p-2'>
         <svg width="14" height="14" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path d="M19 9.375h-8.375V1h-1.25v8.375H1v1.25h8.375V19h1.25v-8.375H19v-1.25Z"></path>
         </svg>
@@ -17,7 +17,7 @@
     {% with community_rules=community|get_community_rules %}
     {% if community_rules|length > 0 %}
     {% for rule in community_rules %}
-    <li class="border-b rounded-t dark:border-gray-600 mb-2">
+    <li class="border-b rounded-t mb-2">
         <div class="flex flex-col gap-2 group">
             <input type="checkbox" id="t-{{rule.id}}" class="peer hidden" onchange="handle_toggle_rule(event)" />
             <label for="t-{{rule.id}}"
@@ -70,7 +70,7 @@
     {% else %}
     <div class="flex flex-col items-center justify-center">
         {% include 'svg/cat_butt.html' %}
-        <p class="text-txt_color_3 dark:text-white_2">Wow such empty</p>
+        <p class="text-txt_color_3">Wow such empty</p>
     </div>
     {% endif %}
     {% endwith %}
