--- a/templates/components/community/edit_community_appearance.html
+++ b/templates/components/community/edit_community_appearance.html
@@ -1,12 +1,12 @@
 <form id="edit_community_appearance" action="{% url 'community:edit_community_appearance' %}" method="POST"
     enctype="multipart/form-data"
-    class="fixed w-[350px] flex flex-col gap-4 left-[3%] border shadow-md bg-white p-5 rounded-lg duration-500 transform top-[100%] dark:border-gray_1 dark:bg-dark_2">
+    class="fixed w-[350px] flex flex-col gap-4 left-[3%] border shadow-md bg-white p-5 rounded-lg duration-500 transform top-[100%]">
     {% csrf_token %}
     <div class="flex flex-row justify-between gap-4 items-center">
         <input type="hidden" name="community_id" value="{{community.id}}">
         <div class='flex flex-row gap-2 items-center'>
             <button type="button" id="btn_navigate_back" onClick="set_current_edit(null)"
-                class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_2 dark:hover:bg-gray_2  rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center hidden">
+                class="bg-button_gray hover:bg-button_gray_hover rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center hidden">
                 <svg rpl="" fill="currentColor" height="16" icon-name="left-outline" viewBox="0 0 20 20" width="16"
                     xmlns="http://www.w3.org/2000/svg">
                     <path d="m13.058 19.442-9-9a.624.624 0 0 1 0-.884l9-9 .884.884L5.384 10l8.558 8.558-.884.884Z">
@@ -17,7 +17,7 @@
         </div>
 
         <div class="flex flex-row gap-2">
-            <button type="button" id="btn_hide_edit_control" onClick="toggle_edit_control()" class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-gray_2 rounded-full
+            <button type="button" id="btn_hide_edit_control" onClick="toggle_edit_control()" class="bg-button_gray hover:bg-button_gray_hover rounded-full
                 w-[40px] h-[40px] py-2 px-2 flex justify-center items-center">
                 <svg rpl="" class="" fill="currentColor" height="20" icon-name="caret-down-outline" viewBox="0 0 20 20"
                     width="20" xmlns="http://www.w3.org/2000/svg">
@@ -27,7 +27,7 @@
                 </svg>
             </button>
 
-            <button type="button" onClick="set_is_editing(false); set_current_edit(null);" class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-gray_2  rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center">
+            <button type="button" onClick="set_is_editing(false); set_current_edit(null);" class="bg-button_gray hover:bg-button_gray_hover rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center">
                 <svg rpl="" fill="currentColor" height="16" icon-name="close-outline" viewBox="0 0 20 20" width="16"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -43,7 +43,7 @@
     <div id="edit_control_container"></div>
     <div class="hidden" id="null_edit_container">
         <div onClick="set_current_edit('Avatar')" class="flex justify-between items-center p-3
-                hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-gray_2  cursor-pointer">
+                hover:bg-button_gray_hover cursor-pointer">
             <p>Avatar</p>
             <div class='flex flex-row gap-2 items-center'>
                 <p id="avatar_is_edited" class='text-[8px] text-[#0B1416] p-1 rounded-lg bg-[#B8C5C9]'></p>
@@ -56,7 +56,7 @@
         </div>
 
         <div onClick='set_current_edit("Banner")' class="flex justify-between items-center p-3
-                hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-gray_2  cursor-pointer">
+                hover:bg-button_gray_hover cursor-pointer">
             <p>Banner</p>
             <div class='flex flex-row gap-2 items-center'>
                 <p id="banner_is_edited" class='text-[8px] text-[#0B1416] p-1 rounded-lg bg-[#B8C5C9]'></p>
@@ -75,7 +75,7 @@
                 ondragenter="event.preventDefault()" ondragleave="event.preventDefault()"
                 ondrop="handle_file_drop(event)">
                 <div
-                    class='w-full h-full border border-black border-dashed dark:border-gray_1 p-6 rounded-lg flex flex-col gap-2 items-center justify-center px-20 text-xs text-[#82959B]'>
+                    class='w-full h-full border border-black border-dashed p-6 rounded-lg flex flex-col gap-2 items-center justify-center px-20 text-xs text-[#82959B]'>
                     <svg rpl="" fill="currentColor" height="20" icon-name="upload-outline" viewBox="0 0 20 20"
                         width="20" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -94,7 +94,7 @@
         <div class='hidden flex items-center justify-center h-full bg-[#0b1416] rounded-lg'>
             <img src="">
             <div class='absolute bottom-0 right-0'>
-                <button type="button" onClick="remove_image()" class='bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-gray_2  rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center
+                <button type="button" onClick="remove_image()" class='bg-button_gray hover:bg-button_gray_hover rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center
                     items-center'>
                     <svg rpl="" fill="currentColor" height="16" icon-name="delete-outline" viewBox="0 0 20 20"
                         width="16" xmlns="http://www.w3.org/2000/svg">
