--- a/templates/components/modals/create_community_modal.html
+++ b/templates/components/modals/create_community_modal.html
@@ -4,14 +4,14 @@
     <div class="relative p-4 w-full max-w-2xl max-h-full">
         <form method="POST" id="create_community_form" enctype="multipart/form-data"
             action="{% url 'community:create_community' %}"
-            class="text-dark_1 dark:text-white_1 bg-white dark:bg-dark_2 flex flex-col gap-4 justify-center p-4 px-8 text-sm relative rounded-lg">
+            class="text-dark_1 bg-white flex flex-col gap-4 justify-center p-4 px-8 text-sm relative rounded-lg">
             {% csrf_token %}
 
             <button type="button" id="btn_create_community_prev" class="hidden relative left-[0%]">
                 <svg width="29" height="30" viewBox="0 0 29 30" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M28.4999 14.0625H3.76493L15.6629 2.163L14.3369 0.836998L0.836931 14.337C0.74985 14.4241 0.680772 14.5274 0.633642 14.6412C0.586513 14.7549 0.562256 14.8769 0.562256 15C0.562256 15.1231 0.586513 15.2451 0.633642 15.3588C0.680772 15.4726 0.74985 15.5759 0.836931 15.663L14.3369 29.163L15.6629 27.837L3.76343 15.9375H28.4999V14.0625Z"
-                        class="dark:fill-white" />
+                        class="" />
                 </svg>
             </button>
 
@@ -25,7 +25,7 @@
                         </p>
                     </div>
                     <button type="button" data-modal-hide="create_community_modal"
-                        class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-gray_2  rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center hover:bg-[#223237]">
+                        class="bg-button_gray hover:bg-button_gray_hover rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center hover:bg-[#223237]">
                         <svg fill="currentColor" height="16" viewBox="0 0 20 20" width="16"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -56,7 +56,7 @@
                             <label for="banner_file_input" ondragover="handleDragEnter(event)"
                                 ondrop="handleBannerFileInputDrop(event)">
                                 <div
-                                    class="bg-white_1 dark:bg-dark_6 w-full h-full border border-black border-dashed dark:border-gray_1 rounded-lg flex flex-col gap-2 items-center justify-center text-xs text-[#82959B]">
+                                    class="bg-white_1 w-full h-full border border-black border-dashed rounded-lg flex flex-col gap-2 items-center justify-center text-xs text-[#82959B]">
                                     <svg fill="currentColor" height="20" viewBox="0 0 20 20" width="20"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
@@ -92,7 +92,7 @@
                             <div id="avatar_file_input_container">
                                 <label for="avatar_file_input">
                                     <div
-                                        class="bg-white_1 dark:bg-dark_6 dark:border-gray_1 w-[100px] h-[100px] border border-black border-dashed rounded-full flex flex-col gap-1 items-center justify-center text-[#82959B]">
+                                        class="bg-white_1 w-[100px] h-[100px] border border-black border-dashed rounded-full flex flex-col gap-1 items-center justify-center text-[#82959B]">
                                         <svg fill="currentColor" height="20" viewBox="0 0 20 20" width="20"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path
@@ -110,12 +110,12 @@
                         </div>
 
                         <div class="w-[75%] relative">
-                            <div class="relative">
+                            <div class="relative border-gray-300">
                                 <input type="text" name="community_name" id="create_community_community_name_input"
-                                    class="bg-white_1 dark:bg-dark_6 block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+                                    class="bg-white_1 block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 rounded-lg border-1 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-blue-600 peer border"
                                     placeholder=" " maxlength="64" required />
                                 <label for="create_community_community_name_input"
-                                    class="absolute text-sm font-medium text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-4 z-10 origin-[0] start-2.5 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto">
+                                    class="absolute text-sm font-medium text-gray-500 duration-300 transform -translate-y-4 scale-75 top-4 z-10 origin-[0] start-2.5 peer-focus:text-blue-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto">
                                     <span class="flex flex-row gap-0">
                                         <p>Community Name</p>
                                         <p class="text-red-500">*</p>
@@ -128,12 +128,10 @@
                     <div class="relative bottom-8">
                         <div class="relative w-full min-w-[200px]">
                             <textarea name="about" id="create_community_community_description_input"
-                                class="bg-white_1 dark:text-white_1 dark:bg-dark_6 border dark:border-[#ffffff33] text-gray-900 text-sm rounded-lg block w-full p-2.5 pt-4 peer"
+                                class="bg-white_1 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 pt-4 peer focus:ring-0 focus:outline-none"
                                 placeholder="" rows="4" maxlength="255"></textarea>
-
                             <label for="create_community_community_description_input"
-                                class="absolute text-sm font-medium text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-4 z-10 origin-[0] start-2.5 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto">
-
+                                class="absolute text-sm font-medium text-gray-500 duration-300 transform -translate-y-4 scale-75 top-4 z-10 origin-[0] start-2.5 peer-focus:text-blue-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto">
                                 <span>
                                     <span> Community Description</span>
                                 </span>
@@ -211,7 +209,7 @@
                         <input type="checkbox" id="topic-{{ topic.id }}" name="topics" value="{{ topic.id }}"
                             class="create_community_topic_checkbox peer hidden optional"/>
                         <label for="topic-{{ topic.id }}"
-                            class="bg-button_gray dark:text-dark_1 rounded-xl ml-2 px-2 py-1 peer-checked:bg-blue-500 transition-colors cursor-pointer border-xl">
+                            class="bg-button_gray rounded-xl ml-2 px-2 py-1 peer-checked:bg-blue-500 transition-colors cursor-pointer border-xl  border border-gray-300">
                             {{ topic.name }}</label>
                     </div>
                     {% endfor %}
@@ -221,7 +219,7 @@
             <button type="button" id="btn_create_community_continue"
                 class="rounded-3xl px-3 py-2 w-full bg-button_red text-white font-md transition-all duration-300 ease-in-out hover:bg-button_red_hover hover:text-white flex flex-row gap-2 justify-center font-medium">
                 <svg aria-hidden="true" id="create_community_check_availability_spinner"
-                    class="w-6 h-6 animate-spin dark:text-gray-600 hidden" viewBox="0 0 100 101" fill="none"
+                    class="w-6 h-6 animate-spin hidden" viewBox="0 0 100 101" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
