--- a/templates/components/modals/delete_community_rule_modal.html
+++ b/templates/components/modals/delete_community_rule_modal.html
@@ -3,15 +3,15 @@
 
     <div class="relative p-4 w-full max-w-2xl max-h-full">
         <form method="POST" action="{% url 'community:delete_community_rule' %}"
-            class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+            class="relative bg-white rounded-lg shadow">
             {% csrf_token %}
 
-            <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
-                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+            <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t">
+                <h3 class="text-xl font-semibold text-gray-900">
                     Delete Rule
                 </h3>
                 <button type="button"
-                    class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+                    class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center"
                     data-modal-hide="delete_community_rule">
                     <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                         viewBox="0 0 14 14">
@@ -25,18 +25,18 @@
             <div class="p-4 md:p-5 space-y-4">
                 <div class="flex flex-col max-h-[300px] overflow-auto">
                     <input name="rule_id" type="hidden">
-                    <p id="txt_rule_name" class="text-sm text-txt_color_2 font-medium mb-2 dark:text-white_1">
+                    <p id="txt_rule_name" class="text-sm text-txt_color_2 font-medium mb-2">
                         {{rule.name}}</p>
-                    <p id="txt_rule_description" class="text-xs text-txt_color_3 dark:text-white_1">{{rule.description}}
+                    <p id="txt_rule_description" class="text-xs text-txt_color_3">{{rule.description}}
                     </p>
                 </div>
                 <!-- Modal footer -->
-                <div class="flex flex-row items-end justify-end p-4 md:p-5 rounded-b dark:border-gray-600">
+                <div class="flex flex-row items-end justify-end p-4 md:p-5 rounded-b">
                     <button type="submit"
-                        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Confirm
+                        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Confirm
                     </button>
                     <button data-modal-hide="delete_community_rule" type="button"
-                        class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Close</button>
+                        class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100">Close</button>
                 </div>
             </div>
         </form>
