--- a/templates/components/modals/sign_up_modal.html
+++ b/templates/components/modals/sign_up_modal.html
@@ -8,7 +8,7 @@
       id="sign_up_form"
       method="POST"
       action="{% url 'account:sign_up' %}"
-      class="dark:text-white_1 dark:bg-dark_5 dark:text-white_1 relative justify-center rounded-2xl bg-white px-16 py-10 text-black"
+      class="relative justify-center rounded-2xl bg-white px-16 py-10 text-black"
       enctype="multipart/form-data"
     >
       {% csrf_token %}
@@ -22,7 +22,7 @@
         >
           <path
             d="M28.4999 14.0625H3.76493L15.6629 2.163L14.3369 0.836998L0.836931 14.337C0.74985 14.4241 0.680772 14.5274 0.633642 14.6412C0.586513 14.7549 0.562256 14.8769 0.562256 15C0.562256 15.1231 0.586513 15.2451 0.633642 15.3588C0.680772 15.4726 0.74985 15.5759 0.836931 15.663L14.3369 29.163L15.6629 27.837L3.76343 15.9375H28.4999V14.0625Z"
-            class="dark:fill-white"
+            class=""
           />
         </svg>
       </button>
@@ -64,13 +64,13 @@
                 type="text"
                 name="email"
                 id="email_input"
-                class="bg-white_1 dark:bg-dark_6 border-1 peer block w-full appearance-none rounded-lg border-gray-300 px-2.5 pb-2.5 pt-4 text-sm text-gray-900 focus:border-blue-600 focus:outline-none focus:ring-0 dark:border-gray-600 dark:text-white dark:focus:border-blue-500"
+                class="bg-white_1 border-1 peer block w-full appearance-none rounded-lg border-gray-300 px-2.5 pb-2.5 pt-4 text-sm text-gray-900 focus:border-blue-600 focus:outline-none focus:ring-0"
                 placeholder=" "
                 required
               />
               <label
                 for="email_input"
-                class="absolute start-2.5 top-4 z-10 origin-[0] -translate-y-4 scale-75 transform text-sm text-gray-500 duration-300 peer-placeholder-shown:translate-y-0 peer-placeholder-shown:scale-100 peer-focus:-translate-y-4 peer-focus:scale-75 peer-focus:text-blue-600 rtl:peer-focus:left-auto rtl:peer-focus:translate-x-1/4 dark:text-gray-400 peer-focus:dark:text-blue-500"
+                class="absolute start-2.5 top-4 z-10 origin-[0] -translate-y-4 scale-75 transform text-sm text-gray-500 duration-300 peer-placeholder-shown:translate-y-0 peer-placeholder-shown:scale-100 peer-focus:-translate-y-4 peer-focus:scale-75 peer-focus:text-blue-600 rtl:peer-focus:left-auto rtl:peer-focus:translate-x-1/4"
                 >Email</label
               >
             </div>
@@ -108,14 +108,14 @@
               type="text"
               name="username"
               id="username_input"
-              class="bg-white_1 dark:bg-dark_6 border-1 peer block w-full appearance-none rounded-lg border-gray-300 px-2.5 pb-2.5 pt-4 text-sm text-gray-900 focus:border-blue-600 focus:outline-none focus:ring-0 dark:border-gray-600 dark:text-white dark:focus:border-blue-500"
+              class="bg-white_1 border-1 peer block w-full appearance-none rounded-lg border-gray-300 px-2.5 pb-2.5 pt-4 text-sm text-gray-900 focus:border-blue-600 focus:outline-none focus:ring-0"
               placeholder=" "
               minlength="8"
               maxlength="20"
             />
             <label
               for="username_input"
-              class="absolute start-2.5 top-4 z-10 origin-[0] -translate-y-4 scale-75 transform text-sm text-gray-500 duration-300 peer-placeholder-shown:translate-y-0 peer-placeholder-shown:scale-100 peer-focus:-translate-y-4 peer-focus:scale-75 peer-focus:text-blue-600 rtl:peer-focus:left-auto rtl:peer-focus:translate-x-1/4 dark:text-gray-400 peer-focus:dark:text-blue-500"
+              class="absolute start-2.5 top-4 z-10 origin-[0] -translate-y-4 scale-75 transform text-sm text-gray-500 duration-300 peer-placeholder-shown:translate-y-0 peer-placeholder-shown:scale-100 peer-focus:-translate-y-4 peer-focus:scale-75 peer-focus:text-blue-600 rtl:peer-focus:left-auto rtl:peer-focus:translate-x-1/4 peer-focus:dark:text-blue-500"
               >Username</label
             >
             <div id="username_message" class="text-xs"></div>
@@ -125,14 +125,14 @@
               type="password"
               name="password"
               id="password_input"
-              class="bg-white_1 dark:bg-dark_6 border-1 peer block w-full appearance-none rounded-lg border-gray-300 px-2.5 pb-2.5 pt-4 text-sm text-gray-900 focus:border-blue-600 focus:outline-none focus:ring-0 dark:border-gray-600 dark:text-white dark:focus:border-blue-500"
+              class="bg-white_1 border-1 peer block w-full appearance-none rounded-lg border-gray-300 px-2.5 pb-2.5 pt-4 text-sm text-gray-900 focus:border-blue-600 focus:outline-none focus:ring-0"
               placeholder=" "
               minlength="8"
               maxlength="20"
             />
             <label
               for="password_input"
-              class="absolute start-2.5 top-4 z-10 origin-[0] -translate-y-4 scale-75 transform text-sm text-gray-500 duration-300 peer-placeholder-shown:translate-y-0 peer-placeholder-shown:scale-100 peer-focus:-translate-y-4 peer-focus:scale-75 peer-focus:text-blue-600 rtl:peer-focus:left-auto rtl:peer-focus:translate-x-1/4 dark:text-gray-400 peer-focus:dark:text-blue-500"
+              class="absolute start-2.5 top-4 z-10 origin-[0] -translate-y-4 scale-75 transform text-sm text-gray-500 duration-300 peer-placeholder-shown:translate-y-0 peer-placeholder-shown:scale-100 peer-focus:-translate-y-4 peer-focus:scale-75 peer-focus:text-blue-600 rtl:peer-focus:left-auto rtl:peer-focus:translate-x-1/4 peer-focus:dark:text-blue-500"
               >Password</label
             >
           </div>
@@ -177,14 +177,14 @@
             <div id="avatar_file_input_container">
               <label
                 for="sign_up_avatar_file_input"
-                class="bg-white_1 dark:bg-dark_6 dark:border-gray_1 flex h-[80px] w-[80px] flex-col items-center justify-center gap-1 rounded-full border border-dashed border-black text-[#82959B]"
+                class="bg-white_1 flex h-[80px] w-[80px] flex-col items-center justify-center gap-1 rounded-full border border-dashed border-black text-[#82959B]"
               >
                 <svg
                   width="45"
                   height="45"
                   viewBox="0 0 45 45"
                   fill="none"
-                  class="stroke-black dark:stroke-white"
+                  class="stroke-black"
                   xmlns="http://www.w3.org/2000/svg"
                 >
                   <path
@@ -224,7 +224,7 @@
               name="bio"
               id="message"
               rows="3"
-              class="bg-white_1 dark:bg-dark_6 dark:text-white_1 block w-full resize-none rounded-lg border p-2.5 text-sm text-xs text-gray-900 dark:border-[#ffffff33]"
+              class="bg-white_1 block w-full resize-none rounded-lg border p-2.5 text-sm text-xs text-gray-900"
               maxlength="128"
               placeholder="Write something about youself"
             ></textarea>
@@ -247,7 +247,7 @@
         <svg
           aria-hidden="true"
           id="check_availability_spinner"
-          class="hidden h-6 w-6 animate-spin dark:text-gray-600"
+          class="hidden h-6 w-6 animate-spin"
           viewBox="0 0 100 101"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
