--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,6 +1,6 @@
 {% load static %} {% load utils %}
 <nav
-  class="text-md bg-white_1 dark:bg-dark_3 dark:border-gray_1 fixed left-0 top-0 z-20 flex h-[10vh] w-full flex-row items-center justify-between border-b p-3 px-6 shadow-md"
+  class="text-md bg-white_1 fixed left-0 top-0 z-20 flex h-[10vh] w-full flex-row items-center justify-between border-b p-3 px-6 shadow-md"
 >
   <div class="flex flex-row items-center gap-2">
     <a
@@ -17,7 +17,7 @@
       >
         <path
           d="M34.4627 6H30.8523V19.5H7.38474V22.5C7.38474 23.325 8.19708 24 9.18994 24H29.0471L36.2679 30V7.5C36.2679 6.675 35.4556 6 34.4627 6ZM27.2419 15V1.5C27.2419 0.675 26.4296 0 25.4367 0H1.96914C0.976281 0 0.16394 0.675 0.16394 1.5V22.5L7.38474 16.5H25.4367C26.4296 16.5 27.2419 15.825 27.2419 15Z"
-          class="fill-black dark:fill-white"
+          class="fill-black"
         />
       </svg>
       Tidder
@@ -83,10 +83,10 @@
 
     <div
       id="drop_down_profile"
-      class="dark:bg-dark_6 z-10 hidden w-56 rounded-md bg-white shadow"
+      class="z-10 hidden w-56 rounded-md bg-white shadow"
     >
       <ul
-        class="divide-y divide-gray-400 px-3 pt-3 text-sm text-gray-700 dark:text-gray-200"
+        class="divide-y divide-gray-400 px-3 pt-3 text-sm text-gray-700 "
         aria-labelledby="btn_drop_down_profile"
       >
         <li class="h-10">
@@ -122,47 +122,14 @@
           </a>
         </li>
         <li class="h-10">
-          <button
-            id="theme-toggle"
-            type="button"
-            class="flex h-full w-full flex-row items-center justify-between"
-          >
-            <p>Theme</p>
-            <svg
-              id="theme-toggle-dark-icon"
-              class="hidden h-5 w-5"
-              fill="currentColor"
-              viewBox="0 0 20 20"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
-              ></path>
-            </svg>
-            <svg
-              id="theme-toggle-light-icon"
-              class="hidden h-5 w-5"
-              fill="currentColor"
-              viewBox="0 0 20 20"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-              ></path>
-            </svg>
-          </button>
-        </li>
-        <li class="h-10">
           <form
             method="POST"
             action="{% url 'account:logout' %}"
-            class="flex h-full flex-row items-center gap-2"
+            class="flex h-full flex-row items-center gap-2" 
           >
             {% csrf_token %}
             <button
-              class="flex h-full flex-row items-center gap-2"
+              class="flex h-full flex-row items-center gap-2 w-full"
               method="post"
             >
               <svg
@@ -199,58 +166,3 @@
 </nav>
 
 {% if not request.user.is_authenticated %} {%include 'components/modals/sign_in_modal.html'%} {%include 'components/modals/sign_up_modal.html'%} {% endif %}
-
-<script>
-  function toggleProfileOptions() {
-    var profileOptions = document.getElementById("profileOptions");
-    if (profileOptions.classList.contains("hidden")) {
-      profileOptions.classList.remove("hidden", "opacity-0");
-      profileOptions.classList.add("block", "opacity-100");
-    } else {
-      profileOptions.classList.remove("block", "opacity-100");
-      profileOptions.classList.add("hidden", "opacity-0");
-    }
-  }
-
-  var themeToggleDarkIcon = document.getElementById("theme-toggle-dark-icon");
-  var themeToggleLightIcon = document.getElementById("theme-toggle-light-icon");
-
-  // Change the icons inside the button based on previous settings
-  if (
-    localStorage.getItem("color-theme") === "dark" ||
-    (!("color-theme" in localStorage) &&
-      window.matchMedia("(prefers-color-scheme: dark)").matches)
-  ) {
-    themeToggleDarkIcon.classList.remove("hidden");
-  } else {
-    themeToggleLightIcon.classList.remove("hidden");
-  }
-
-  var themeToggleBtn = document.getElementById("theme-toggle");
-
-  themeToggleBtn.addEventListener("click", function () {
-    // toggle icons inside button
-    themeToggleDarkIcon.classList.toggle("hidden");
-    themeToggleLightIcon.classList.toggle("hidden");
-    // if set via local storage previously
-    if (localStorage.getItem("color-theme")) {
-      if (localStorage.getItem("color-theme") === "light") {
-        document.documentElement.classList.add("dark");
-        localStorage.setItem("color-theme", "dark");
-      } else {
-        document.documentElement.classList.remove("dark");
-        localStorage.setItem("color-theme", "light");
-      }
-
-      // if NOT set via local storage previously
-    } else {
-      if (document.documentElement.classList.contains("dark")) {
-        document.documentElement.classList.remove("dark");
-        localStorage.setItem("color-theme", "light");
-      } else {
-        document.documentElement.classList.add("dark");
-        localStorage.setItem("color-theme", "dark");
-      }
-    }
-  });
-</script>
