--- a/templates/components/post/vote_control.html
+++ b/templates/components/post/vote_control.html
@@ -1,7 +1,7 @@
 {% load utils %}
 
-<div class="flex flex-row gap-2 px-3 py-1 rounded-xl 
-{% if content in user_upvoted_posts or content in user_upvoted_comments %}bg-red-500 text-white{%elif content in user_downvoted_posts or content in user_downvoted_comments %}bg-blue-500 text-white{%else%}dark:bg-dark_3{%endif%} border dark:border-white_3">
+<div class="border flex flex-row gap-2 px-3 py-1 rounded-xl 
+{% if content in user_upvoted_posts or content in user_upvoted_comments %}bg-red-500 text-white{%elif content in user_downvoted_posts or content in user_downvoted_comments %}bg-blue-500 text-white{%endif%}">
 
     <button 
         {% if not user.is_authenticated %} 
@@ -15,13 +15,21 @@
         {% endif %}
         >
 
-        <svg rpl="" class = "dark:fill-white" fill="currentColor" height="16" icon-name="upvote-outline" viewBox="0 0 20 20" width="16" xmlns="http://www.w3.org/2000/svg">
+        <svg rpl="" class = "
+            {% if content in user_upvoted_posts or content in user_downvoted_posts %}
+                fill-white
+            {% endif %}"
+            fill="currentColor" height="16" icon-name="upvote-outline" viewBox="0 0 20 20" width="16" xmlns="http://www.w3.org/2000/svg">
             <path d="{% if not content in user_upvoted_posts%}M10 19c-.072 0-.145 0-.218-.006A4.1 4.1 0 0 1 6 14.816V11H2.862a1.751 1.751 0 0 1-1.234-2.993L9.41.28a.836.836 0 0 1 1.18 0l7.782 7.727A1.751 1.751 0 0 1 17.139 11H14v3.882a4.134 4.134 0 0 1-.854 2.592A3.99 3.99 0 0 1 10 19Zm0-17.193L2.685 9.071a.251.251 0 0 0 .177.429H7.5v5.316A2.63 2.63 0 0 0 9.864 17.5a2.441 2.441 0 0 0 1.856-.682A2.478 2.478 0 0 0 12.5 15V9.5h4.639a.25.25 0 0 0 .176-.429L10 1.807Z{% else %}M10 19c-.072 0-.145 0-.218-.006A4.1 4.1 0 0 1 6 14.816V11H2.862a1.751 1.751 0 0 1-1.234-2.993L9.41.28a.836.836 0 0 1 1.18 0l7.782 7.727A1.751 1.751 0 0 1 17.139 11H14v3.882a4.134 4.134 0 0 1-.854 2.592A3.99 3.99 0 0 1 10 19Z{% endif %}"></path>
         </svg>
 
     </button>
 
-    <h1 class="vote_count dark:text-white"
+    <h1 
+        class="
+            {% if content in user_upvoted_posts or content in user_downvoted_posts %}
+                text-white
+            {% endif %}"
         {% if type == 'post'%}
         data-voted="{% if content in user_upvoted_posts%}upvote{%elif content in user_downvoted_posts %}downvote{%endif%}"
         {% else %}
@@ -47,7 +55,11 @@
             " 
         {% endif %}>
 
-        <svg rpl="" class = "dark:fill-white" fill="currentColor" height="16" icon-name="downvote-outline" viewBox="0 0 20 20" width="16" xmlns="http://www.w3.org/2000/svg">
+        <svg rpl="" class = "
+            {% if content in user_upvoted_posts or content in user_downvoted_posts %}
+                fill-white
+            {% endif %}"
+        fill="currentColor" height="16" icon-name="downvote-outline" viewBox="0 0 20 20" width="16" xmlns="http://www.w3.org/2000/svg">
             <path d="{% if content not in user_downvoted_posts %}M10 1c.072 0 .145 0 .218.006A4.1 4.1 0 0 1 14 5.184V9h3.138a1.751 1.751 0 0 1 1.234 2.993L10.59 19.72a.836.836 0 0 1-1.18 0l-7.782-7.727A1.751 1.751 0 0 1 2.861 9H6V5.118a4.134 4.134 0 0 1 .854-2.592A3.99 3.99 0 0 1 10 1Zm0 17.193 7.315-7.264a.251.251 0 0 0-.177-.429H12.5V5.184A2.631 2.631 0 0 0 10.136 2.5a2.441 2.441 0 0 0-1.856.682A2.478 2.478 0 0 0 7.5 5v5.5H2.861a.251.251 0 0 0-.176.429L10 18.193Z{%else%}M10 1c.072 0 .145 0 .218.006A4.1 4.1 0 0 1 14 5.184V9h3.138a1.751 1.751 0 0 1 1.234 2.993L10.59 19.72a.836.836 0 0 1-1.18 0l-7.782-7.727A1.751 1.751 0 0 1 2.861 9H6V5.118a4.134 4.134 0 0 1 .854-2.592A3.99 3.99 0 0 1 10 1Z{%endif%}"></path>
         </svg>
     </button>
